feat: 배포 설정